manifests/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-server
  labels:
    name: fastapi-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-localboard
  template:
    metadata:
      labels:
        app: fastapi-localboard
    spec:
      restartPolicy: Always
      containers:
        - name: fastapi-localboard
          image: apidemon/localboardapi:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
