manifests/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-db
  labels:
    name: postgres-db
spec:
  replicas: 1
  selector:
    matchLabels:
      service: postgres-db
  template:
    metadata:
      labels:
        service: postgres-db
    spec:
      containers:
        - image: postgres:latest
          imagePullPolicy: Always
          name: postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-volume-mount
      volumes:
        - name: postgres-volume-mount
          persistentVolumeClaim:
            claimName: postgres-db-pvc
