manifests/tgbot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tgbot-client
  labels:
    name: tgbot-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tgbot-client
  template:
    metadata:
      labels:
        app: tgbot-client
    spec:
      restartPolicy: Always
      containers:
        - name: tgbot-client
          image: apidemon/localboardtgbot:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
