manifests/tgbot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tgbot-client-service
  labels:
    service: tgbot-client-service
spec:
  type: ClusterIP
  ports:
    - name: tcp-port
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: tgbot-client
